# stockroom

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml  release.yml
app/backend/stockroom/: __init__.py  library_core.py
app/frontend/: .gitignore  README.md  build-env.d.ts  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.node.json  vite.config.ts
app/frontend-dist/: index.html
app/frontend-dist/assets/: GLTFLoader-Bs6Vi3yg.js  GLTFLoader-D4jz2eQT.js  index--ar3SJSS.css  index-0-buYBhZ.css  index-02-HkXel.js  index-13nMBI2P.js  index-15lqldX7.css  index-1DiIEmSk.js  index-1X8TdZS5.css  index-1XfRGQ08.js  index-1_LwK5BM.js  index-1a6ZWBpi.css  index-1mSsQz1G.js  index-254w4TNY.js  index-2F0qPqTQ.css  index-2inKZc8w.js  index-2o727nlI.js  index-2ymhKDzm.js  index-3FI3YZav.js  index-431MK3gY.js  index-4lhgE1O6.js  index-5NAPhQAG.css  index-5NQQx_OE.js  index-5dGNdXsC.js  index-76d75Uj2.js  index-7Sy_8zbo.css  index-7pjQ8c1E.js  index-7qxTjDog.css  index-8fKUyk3y.js  index-A-nadyzf.css  index-AZoahWLi.js  index-Aoy1EQly.js  index-B-QsXp7_.js  index-B0BWVhPF.css  index-B0SYGO9m.css  index-B0eSwJmP.js  index-B1A-Y16e.css  index-B1JWShtr.css  index-B1MdvsQB.js  index-B1jVjk69.css  (+426 more)
app/frontend/src/: App.test.tsx  App.tsx  main.tsx  version.d.ts
docs/: FINALE_SAUCE_BOM.md  FINALE_SAUCE_BOM.xlsx  FINALE_SAUCE_SOURCE.md  Stockroom-Knowledge-Transfer.md  adding-a-feature.md  architecture.md  backend-testing.md
docs/design/: design-rules.md  north-star-ui.md
docs/mockups/: accent-direction.html  layout-direction.html  library-app.html  library-combined.html  library-v2.html  projects.html  render-library-parts.html
docs/research/: 2026-07-13-kicad-ecosystem-learnings.md
docs/research/kicad-sexp-poc/: README.md  roundtrip_test.py  semdiff.py  span_poc.py
docs/superpowers/plans/: 2026-07-12-stockroom-m1-foundation.md  2026-07-12-stockroom-m2-library-data.md  2026-07-12-stockroom-m3-ingestion.md  2026-07-13-stockroom-m4-enrichment.md  2026-07-13-stockroom-m5-shell.md  2026-07-13-stockroom-m6-frontend.md  2026-07-13-stockroom-m7-projects.md
docs/superpowers/specs/: 2026-07-12-perfected-rewrite-direction.md  2026-07-12-stockroom-design.md
launcher/: README.md  gitshim.py  stockroom_launcher.py
legacy/: README.md
legacy/tools/: LibraryManager.py  fp_render.py  kicad_paths.py  kicad_tools.py  merge_symbols.py  nd_board_setup.py  nd_commit_msg.py  nd_design_presets.py  nd_fab_presets.py  nd_git.py  nd_kicad_checks.py  nd_library_fill.py  nd_netclass_manager.py  nd_object_conform.py  nd_pcb_profiles.py  nd_project_health.py  nd_project_settings_manager.py  nd_updater.py  nd_wizard.py  pcb_profiles.json  stm32_authority.py  stm32_db.py  stm32_pins_tab.py
libraries/.projects/: finale_sauce.json  sh_files.json
libraries/Main/altium/: .gitignore
libraries/Main/models/: MCT06030D1101BP500.step  USB4105-GF-A-120.step  WRIS-RSKS_0603.step
libraries/Main/parts/: 1043.json  150060gs75000.json  150060rs75000.json  2n7002.json  358.json  560112116004.json  560112116009.json  560112116040.json  560112116151.json  594_mct06030d1101bp5.json  599-0160-137f.json  599_0160_137f.json  61300411121.json  61300811121.json  667_erj_p03f1101v.json  708_rmcf0603ft1k13.json  710_560112116151.json  742792022.json  74438357010.json  74439346068.json  74ahc1g32qse-7.json  74ahc1g32qse_7.json  abm8-25.000mhz-b2-t.json  abm8_25_000mhz_b2_t.json  ac0603fr-07255kl.json  ac0603fr_07255kl.json  bq24074rgtt.json  cc0603krx5r9bb105.json  cc0805kfx5r8bb475.json  cc0805mkx5r7bb106.json  cc1206mkx5r9bb106.json  cl05b102kb5nnnc.json  cl05b104ko5nnnc.json  cl05b222kb5nnnc.json  cl05b332kb5nnnc.json  cl05b332kb5nnwc.json  cl05c100jb5nnnc.json  cl05c100jb5nnwc.json  cl05c220jb5nnnc.json  cl05c750jb5nnnc.json  (+93 more)
libraries/Main/symbols/: SR-Connectors.kicad_sym  SR-Crystals_Oscillators.kicad_sym  SR-ICs.kicad_sym  SR-Resistors.kicad_sym
libraries/Stockroom/altium/: Stockroom.DbLib  stockroom-parts.db  tpd6e05u06rvzr.PcbLib  tpd6e05u06rvzr.SchLib
libraries/Stockroom/models/: TPD6E05U06RVZR.stp
libraries/Stockroom/parts/: tpd6e05u06rvzr.json
libraries/Stockroom/symbols/: SR-Diodes.kicad_sym
packaging/: README.md  build_exe.ps1  stockroom.spec  stockroom_launcher.py
scripts/: bake_stm_index.py  s8_cold_rebuild.py
tests/backend/: conftest.py  test_library_core.py  test_stm_import_boundary.py
tests/backend/altium/: cfb_writer.py  conftest.py  test_attach_altium.py  test_attach_cli.py  test_datasource.py  test_dblib.py  test_extract.py  test_odbc.py  test_oleread.py  test_proof_integration.py  test_regenerate.py  test_schdoc.py
tests/backend/api/: conftest.py  test_altium.py  test_app_factory.py  test_asset_attach_api.py  test_auto_push.py  test_cad_source_api.py  test_context_switch.py  test_dev.py  test_doctor.py  test_duplicates.py  test_end_to_end.py  test_enrich_api.py  test_gitshim.py  test_host_run.py  test_ingest_api.py  test_jobs.py  test_jobs_run_write.py  test_launcher.py  test_library.py  test_library_cad_source.py  test_library_history.py  test_library_refresh_api.py  test_library_rescan_api.py  test_mime.py  test_onboarding.py  test_parametric_facets.py  test_passive_add_api.py  test_previews.py  test_profiles.py  test_projects.py  test_search.py  test_security.py  test_serve.py  test_settings.py  test_stm_router.py  test_sync_api.py  test_system.py  test_updater.py  test_webview_fetch.py  test_window.py
tests/backend/capture/: test_classify.py  test_requirements.py  test_session.py
tests/backend/enrich/: conftest.py  test_add_plan.py  test_asset_source.py  test_bulk.py  test_cache.py  test_cad_source.py  test_datasheet.py  test_digikey_api.py  test_distributor_url.py  test_extract.py  (+24 more)
(+565 files in other folders)
