[project]
name = "stockroom"
version = "0.1.0"
description = "KiCad V10 component-library manager"
requires-python = ">=3.12"
dependencies = ["easyeda2kicad>=1.0.1", "curl_cffi>=0.7"]

[dependency-groups]
dev = ["pytest>=8.2"]

[tool.hatch.build.targets.wheel]
packages = ["app/backend/stockroom"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["app/backend"]
testpaths = ["tests/backend"]
addopts = "-m 'not live_enrich'"
markers = [
    "requires_kicad_cli: test needs the kicad-cli binary; skipped when absent",
    "live_enrich: hits the real network; deselected by default, opt-in only",
]
