[project]
name = "stockroom"
version = "0.1.0"
description = "KiCad V10 component-library manager"
requires-python = ">=3.12"
dependencies = [
    "easyeda2kicad>=1.0.1",
    "curl_cffi>=0.7",
    # The portable headless-Chromium render tier (stockroom.scrape). Playwright is a
    # backend library (not a GUI toolkit), driven headless as a subprocess, so it runs
    # identically on Windows/macOS/Linux/CI and keeps the stockroom.api import gate green.
    # Chromium is provisioned by `playwright install chromium` (bundled into the exe in S7).
    # Playwright drives BOTH the Chromium BrowserFetcher and Camoufox; camoufox constrains
    # it to <1.61, and the async API we use is stable across 1.60/1.61.
    "playwright>=1.55,<1.61",
    "pypdf>=4.0",
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "sse-starlette>=2.1",
    # The 3D model preview (M6d): trimesh reads the part's STEP/WRL model and exports
    # a web-ready GLB for the three.js viewer; cascadio is trimesh's STEP loader
    # (OpenCASCADE). Optional at runtime (an absent stack surfaces as an honest 502,
    # never a crash), but declared so the shipped app renders 3D out of the box.
    "trimesh>=4.0",
    "cascadio>=0.0.14",
    # The WebView2 host window (stockroom.host). Windows-scoped: pywebview is only
    # imported on the Windows host path, so a Linux dev/CI env never pulls its GUI
    # backends, while `uv sync --frozen` on the owner's Windows box provisions it so
    # the launcher's windowed entry can actually open a window (not ModuleNotFoundError).
    "pywebview>=5 ; sys_platform == 'win32'",
    "selectolax>=0.4.11",
    # The maximum-stealth render tier (stockroom.scrape.fetch.camoufox_browser): a Firefox
    # fork with genuine fingerprints that defeats Akamai AND DataDome (Mouser) where patched
    # Chromium is hard-blocked. Its browser build is provisioned by `camoufox fetch`.
    "camoufox[geoip]>=0.5.4",
    # The Altium DbLib data source (stockroom.altium.datasource): openpyxl writes the
    # MPN-keyed .xlsx an Altium .DbLib reads through the ACE engine. Pure-Python, no engine
    # at emit time; the .xlsx is a derived, gitignored artifact regenerated from the records.
    "openpyxl>=3.1",
    # Read Altium .SchLib/.PcbLib/.IntLib (OLE2/CFB) entry names + extract .IntLib embedded
    # sources (stockroom.altium.oleread / .extract). olefile is BSD, read-only, pure-Python;
    # combined with zlib it replicates KiCad's DecodeIntLibStream. We never write Altium binary.
    "olefile>=0.47",
]

[dependency-groups]
dev = ["pytest>=8.2", "httpx>=0.27"]

[tool.hatch.build.targets.wheel]
packages = ["app/backend/stockroom"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["app/backend", "."]
testpaths = ["tests/backend"]
addopts = "-m 'not live_enrich'"
markers = [
    "requires_kicad_cli: test needs the kicad-cli binary; skipped when absent",
    "live_enrich: hits the real network; deselected by default, opt-in only",
    "windows_only: needs a real Windows machine (WebView2, KiCad config surgery); skipped elsewhere",
    "requires_browser: test launches a real headless Chromium; skipped when Playwright/Chromium cannot launch",
]

[tool.ruff]
# Tuned to the existing style so the formatter does not churn untouched code. Runs on the files
# you touch via pre-commit; a repo-wide format is a separate deliberate task.
line-length = 100
target-version = "py312"

[tool.ruff.lint]
# Lenient on purpose: real issues (pyflakes) + import order, not style nits. Line length is left
# to the formatter, and a couple of pragmatic ignores keep it out of the way.
select = ["F", "I"]
ignore = ["F401"]   # an unused import is often a deliberate re-export; ruff-format keeps it tidy
